vault/ha/install/015-StatefulSet-vault.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/name: vault
  name: vault
  namespace: hashicorp
spec:
  podManagementPolicy: Parallel
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/name: vault
  serviceName: vault
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: vault
        app.kubernetes.io/name: vault
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: vault
                  app.kubernetes.io/name: vault
              topologyKey: kubernetes.io/hostname
      containers: 
      - args:
        - "sed -E \"s/HOST_IP/${HOST_IP?}/g\" /vault/config/extraconfig-from-values.hcl
          > /tmp/storageconfig.hcl;\nsed -Ei \"s/POD_IP/${POD_IP?}/g\" /tmp/storageconfig.hcl;\n/usr/local/bin/docker-entrypoint.sh
          vault server -config=/tmp/storageconfig.hcl \n"
        command:
        - /bin/sh
        - -ec
        image: vault:1.3.2
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - sleep 5 && kill -SIGTERM $(pidof vault)
        name: vault
        ports:
        - containerPort: 8200
          name: http
          protocol: TCP
        - containerPort: 8201
          name: internal
          protocol: TCP
        - containerPort: 8202
          name: replication
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -ec
            - vault operator unseal xE3C1IzlgCvV6mucZZIXEY1NKg0rgaePBzSVY+5ALxhY
            - sleep 5
            - vault operator unseal 0y/RSDOtaDp+TxEXLcdJFiHYqlC9Ez2v00TsnQfTX23t
            - sleep 5
            - vault operator unseal iK5YvKGat8hs3GP1rDsQxuvL5ERPW887qf7hXos/WJ7V
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
          limits:
            memory: 256Mi
            cpu: 250m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /vault/config
          name: config
        - mountPath: /var/run/secrets/kubernetes.io/certs
          name: cert
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      serviceAccount: vault
      serviceAccountName: vault
      volumes:
      - configMap:
          name: vault-config
        name: config
      - name: cert
        secret:
          secretName: vault-cert
  updateStrategy:
    type: OnDelete
