vault/ha/install/016-Route-vault.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: vault-ha-route
  namespace : hashicorp
  labels:
    app.kubernetes.io/name: vault
spec:
  to:
    kind: Service
    name: vault
    weight: 100
  port:
    targetPort: 8200
